changing hash name from name to form

--- a/app/views/say_hello/new.html.erb
+++ b/app/views/say_hello/new.html.erb
@@ -2,7 +2,7 @@
 
 <p>What is your name?</p>
 
-<%= form_for(:name, url: say_hello_path) do |f| %>
+<%= form_for(:form, url: say_hello_path) do |f| %>
   <%= f.text_field :name %>
   <%= f.submit %>
 <% end %>
