--- a/app/views/say_hello/show.html.erb
+++ b/app/views/say_hello/show.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/say_hello/show.html.erb %>
 <p>Hello <%= @name %>, It's nice to meet you!</p>
 
 <%= link_to 'Ask Name', say_hello_new_path %>
