--- a/app/views/counting_characters/index.html.erb
+++ b/app/views/counting_characters/index.html.erb
@@ -1,11 +1,9 @@
 <p>What is the input string?</p>
-<%= form_for(:form) do |f| %>
+<%= form_for(:form, remote: true) do |f| %>
   <%= f.text_field :input %>
   <%= f.submit %>
 <% end %>
 
-<% if(@output) %>
-  <p>
-    <%= @output %> has <%= @output.size %> characters
-  </p>
-<% end %>
+<div id="charcount">
+  <%= render 'charcount' %>
+</div>
