--- a/app/views/counting_characters/create.js.erb
+++ b/app/views/counting_characters/create.js.erb
@@ -1,1 +1,1 @@
-$("#charcount").html("<%= escape_javascript(render('charcount')) %>")
+document.getElementById("charcount").innerHTML = "<%= escape_javascript(render('charcount')) %>"
