--- a/app/views/counting_characters/_charcount.erb
+++ b/app/views/counting_characters/_charcount.erb
@@ -1,3 +1,4 @@
+<%# app/views/counting_characters/_charcount.erb %>
 <% if(@output) %>
   <p>
     <%= @output %> has <%= @output.size %> characters
