--- a/app/views/printing_quotes/index.html.erb
+++ b/app/views/printing_quotes/index.html.erb
@@ -2,19 +2,15 @@
 
 <div>
   <%= form_for(:form) do |f| %>
-    <%= f.label "What is the quote?" %>
-    <%= f.text_area :quote %>
-    <%= f.submit %>
-  <% end %>
-</div>
-
-<div>
-  <% if @cache.quote %>
-    <%= form_for(:form) do |f| %>
+    <div class="form-group">
+      <%= f.label "What is the quote?" %>
+      <%= f.text_area :quote, class: "form-control" %>
+    </div>
+    <div class="form-group">
       <%= f.label "Who said it?" %>
-      <%= f.text_area :name %>
-      <%= f.submit %>
-    <% end %>
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
+    <%= f.submit %>
   <% end %>
 </div>
 
