fixed printing_quotes link

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,5 +2,5 @@
 <table class="table table-striped">
   <tr><td><%= link_to 'Exercise 1: Saying Hello', say_hello_new_path %></td></tr>
   <tr><td><%= link_to 'Exercise 2: Counting Characters', counting_characters_path %></td></tr>
-  <tr><td><%= link_to 'Exercise 3: Printing Quotes', counting_characters_path %></td></tr>
+  <tr><td><%= link_to 'Exercise 3: Printing Quotes', printing_quotes_path %></td></tr>
 </table>
