--- a/app/views/printing_quotes/index.html.erb
+++ b/app/views/printing_quotes/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Printing Quotes</h1>
-
+<div>
+  <% flash.each do |message_type, message| %>
+    <div class="alert"><span class="label label-danger"><%= message %></span></div>
+  <% end %>
+</div>
 <div>
   <%= form_for(:form) do |f| %>
     <div class="form-group">
