--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,4 +3,5 @@
   <tr><td><%= link_to 'Exercise 1: Saying Hello', say_hello_new_path %></td></tr>
   <tr><td><%= link_to 'Exercise 2: Counting Characters', counting_characters_path %></td></tr>
   <tr><td><%= link_to 'Exercise 3: Printing Quotes', printing_quotes_path %></td></tr>
+  <tr><td><%= link_to 'Exercise 4: Printing Quotes V2', printing_quotes_v2_path %></td></tr>
 </table>
